fix(css): Adjust footer and wave alignment

--- a/css/boothDirectory_style.css
+++ b/css/boothDirectory_style.css
@@ -39,8 +39,9 @@ body {
 
 footer {
   background-color: #201D20;
-  height: 30%;
-  padding: 30%;
+  padding: 40px 0;
+  width: 100%;
+  text-align: center;
 }
 
 .social-icons {
