--- a/css/registeration_style.css
+++ b/css/registeration_style.css
@@ -221,8 +221,9 @@ section{
 
 footer{
   background-color: #201D20;
-  height: 30%;
-  padding: 30%;
+  padding: 40px 0;
+  width: 100%;
+  text-align: center;
 }
 .social-icons{
   display: flex;
